--- a/01-backend-routing/deployment.yaml
+++ b/01-backend-routing/deployment.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     app: backend-routing-app
 spec:
-  replicas: 2
+  replicas: 1
   selector:
     matchLabels:
       app: backend-routing-app
@@ -16,31 +16,17 @@ spec:
         app: backend-routing-app
     spec:
       containers:
-      - name: backend-routing-app
-        image: hashicorp/http-echo:latest
-        args:
-          - -text="Hello from Backend Routing App! This is a simple backend-routing application using Envoy Gateway."
-          - -listen=:8080
-        ports:
-        - name: http
-          containerPort: 8080
-          protocol: TCP
-        resources:
-          requests:
-            cpu: 100m
-            memory: 128Mi
-          limits:
-            cpu: 200m
-            memory: 256Mi
-        livenessProbe:
-          httpGet:
-            path: /
-            port: http
-          initialDelaySeconds: 10
-          periodSeconds: 10
-        readinessProbe:
-          httpGet:
-            path: /
-            port: http
-          initialDelaySeconds: 5
-          periodSeconds: 5
+        - image: gcr.io/k8s-staging-gateway-api/echo-basic:v20231214-v1.0.0-140-gf544a46e
+          imagePullPolicy: IfNotPresent
+          name: backend-routing-app
+          ports:
+            - containerPort: 3000
+          env:
+            - name: POD_NAME
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.name
+            - name: NAMESPACE
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.namespace
