--- a/01-backend-routing/service.yaml
+++ b/01-backend-routing/service.yaml
@@ -8,9 +8,9 @@ metadata:
 spec:
   type: ClusterIP
   ports:
-  - port: 8080
-    targetPort: http
-    protocol: TCP
-    name: http
+    - name: http
+      port: 3000
+      targetPort: 3000
+      protocol: TCP
   selector:
     app: backend-routing-app
