--- a/03-client-traffic-policy/deployment.yaml
+++ b/03-client-traffic-policy/deployment.yaml
@@ -1,24 +1,24 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: circuit-breakers-app
+  name: client-traffic-policy-app
   namespace: default
   labels:
-    app: circuit-breakers-app
+    app: client-traffic-policy-app
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: circuit-breakers-app
+      app: client-traffic-policy-app
   template:
     metadata:
       labels:
-        app: circuit-breakers-app
+        app: client-traffic-policy-app
     spec:
       containers:
         - image: gcr.io/k8s-staging-gateway-api/echo-basic:v20231214-v1.0.0-140-gf544a46e
           imagePullPolicy: IfNotPresent
-          name: circuit-breakers-app
+          name: client-traffic-policy-app
           ports:
             - containerPort: 3000
           env:
