--- a/03-client-traffic-policy/service.yaml
+++ b/03-client-traffic-policy/service.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: circuit-breakers-app
+  name: client-traffic-policy-app
   namespace: default
   labels:
-    app: circuit-breakers-app
+    app: client-traffic-policy-app
 spec:
   type: ClusterIP
   ports:
@@ -13,4 +13,4 @@ spec:
       targetPort: 3000
       protocol: TCP
   selector:
-    app: circuit-breakers-app
+    app: client-traffic-policy-app
