--- a/04-connection-limit/service.yaml
+++ b/04-connection-limit/service.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: circuit-breakers-app
+  name: connection-limit-app
   namespace: default
   labels:
-    app: circuit-breakers-app
+    app: connection-limit-app
 spec:
   type: ClusterIP
   ports:
@@ -13,4 +13,4 @@ spec:
       targetPort: 3000
       protocol: TCP
   selector:
-    app: circuit-breakers-app
+    app: connection-limit-app
